Fixed bug #39869 (safe_read does not initialize errno). (michiel at boland dot org)